--- a/consensus/config.yml
+++ b/consensus/config.yml
@@ -13,6 +13,11 @@ BELLATRIX_FORK_EPOCH: 4
 BELLATRIX_FORK_VERSION: 0x20000091
 TERMINAL_TOTAL_DIFFICULTY: 50
 
+
+CAPELLA_FORK_EPOCH: 2
+CAPELLA_FORK_VERSION: 0x20000092
+
+
 # Time parameters
 SECONDS_PER_SLOT: 12
 SLOTS_PER_EPOCH: 6
